# GhidraInsight

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_QUALITY_IMPROVEMENTS.md  CONTRIBUTING.md  DELIVERY_COMPLETE.md  Dockerfile  Dockerfile.ghidra  ENHANCEMENT_SUMMARY.md  INDEX.md  INSTALLATION.md  LICENSE  QUICK_REFERENCE.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci-cd.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BACKUP_AND_RECOVERY.md  CLOUD_DEPLOYMENT_AWS.md  CLOUD_DEPLOYMENT_AZURE.md  CLOUD_DEPLOYMENT_GCP.md  DELIVERY_COMPLETE.md  ENHANCEMENT_SUMMARY.md  INDEX.md  INSTALLATION.md  PLUGIN_DEVELOPMENT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUALITY_REPORT.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_USER_GUIDE.md  QUICK_USER_GUIDE_EN.md  README.md  ROADMAP.md  SECURITY.md  V2_FEATURES_COMPLETE.md  VERSION_2.0_FEATURES.md
examples/: CLAUDE_INTEGRATION.md  MCP_SERVER.md  OPENAI_INTEGRATION.md  claude_integration.py  mcp_server.py  openai_integration.py
examples/plugins/: example_custom_analyzer.py
ghidra-plugin/: build.gradle  build.gradle.kts
ghidra-plugin/src/main/java/com/ghidrainsight/: GhidraInsightPlugin.java
ghidra-plugin/src/main/java/com/ghidrainsight/analysis/: CryptoDetector.java  CryptoDetectorImpl.java  TaintAnalyzer.java  TaintAnalyzerImpl.java
ghidra-plugin/src/main/java/com/ghidrainsight/core/: GhidraInsightCore.java  GhidraInsightModule.java
ghidra-plugin/src/main/java/com/ghidrainsight/core/service/: AnalysisService.java  AnalysisServiceImpl.java  VulnerabilityDetector.java  VulnerabilityDetectorImpl.java
ghidra-plugin/src/main/java/com/ghidrainsight/mcp/: MCPServer.java  SSEClient.java  WebSocketHandler.java
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml
k8s/: README.md  configmap.yaml  ghidra-plugin-deployment.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  python-mcp-deployment.yaml  web-dashboard-deployment.yaml
python-mcp/: Dockerfile  README.md  pyproject.toml
python-mcp/ghidrainsight/: __init__.py  auth.py  config.py  error_handling.py  llm_integration.py  logging_config.py  monitoring.py  security.py
python-mcp/ghidrainsight/cli/: __init__.py
python-mcp/ghidrainsight/core/: __init__.py  analysis.py  blockchain_analysis.py  cache.py  client.py  distributed_analysis.py  dynamic_analysis.py  enterprise_auth.py  exploit_patterns.py  gdpr_compliance.py  gpu_acceleration.py  instrumentation.py  malware_detection.py  mobile_analysis.py  multi_tenancy.py  performance_optimization.py  real_analysis.py  streaming_architecture.py
python-mcp/ghidrainsight/db/: __init__.py  database.py  models.py  repositories.py
python-mcp/ghidrainsight/mcp/: __init__.py
python-mcp/ghidrainsight/plugins/: __init__.py  base.py  loader.py  registry.py
python-mcp/tests/: conftest.py  test_basic.py
scripts/: setup.sh
web-dashboard/: Dockerfile  index.html  package-lock.json  package.json
web-dashboard/src/: App.css  App.test.tsx  App.tsx
web-dashboard/src/components/: AnalysisPanel.tsx  BinaryDiffViewer.tsx  BinaryExplorer.tsx  ChatInterface.tsx  FunctionGraph.tsx
